log
Fri 12 May 2023 12:19:03 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
5dcc37c
Fri 12 May 2023 12:20:54 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:41:11: error: ‘A’ is used uninitialized [-Werror=uninitialized]
   41 |   A->data = NULL;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
815d832
Fri 12 May 2023 12:21:25 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b370d50
Fri 12 May 2023 12:23:47 PM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
060485e
